--- a/public/json_open_old.html
+++ b/public/json_open_old.html
@@ -1,72 +1,72 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="zh-CN">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="ゲーム「マギアレコード」のキャラクタストーリー検索のJSONデータを公開しています。">
+  <meta name="description" content="公开游戏《魔法纪录》的角色故事搜索的JSON数据。">
   <base target="_top">
   <link rel="icon" type="image/x-icon" href="./img/png/ファビコン.png">
-  <title>マギレコキャラクタストーリー検索 JSON（旧バージョン）</title>
+  <title>魔法纪录角色故事搜索 JSON (旧版本)</title>
 </head>
 
 <body>
-  <H3 style="margin:0px">マギレコキャラクタストーリー検索 JSON（旧バージョン）</H3>
-  ツールなどからダイレクトにアクセスしても大丈夫です。(リアルタイム更新します)<BR>
-  商用目的でなければ自由に使用、公開していただいて構いません。(データ利用の際はご連絡頂けると幸いです(事後でOKです))
+  <H3 style="margin:0px">魔法纪录角色故事搜索 JSON (旧版本)</H3>
+  可以直接从工具等访问（实时更新）。<BR>
+  只要不用于商业目的，即可自由使用、公开。（若使用数据，烦请联系告知（事后亦可））
   <BR><BR>
 
 
-  メイン【第1部】<BR>
+  主线【第1部】<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%83%A1%E3%82%A4%E3%83%B3%E3%80%90%E7%AC%AC1%E9%83%A8%E3%80%91">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%83%A1%E3%82%A4%E3%83%B3%E3%80%90%E7%AC%AC1%E9%83%A8%E3%80%91
   </a><BR><BR>
 
-  メイン【第2部】<BR>
+  主线【第2部】<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%83%A1%E3%82%A4%E3%83%B3%E3%80%90%E7%AC%AC2%E9%83%A8%E3%80%91">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%83%A1%E3%82%A4%E3%83%B3%E3%80%90%E7%AC%AC2%E9%83%A8%E3%80%91
   </a><BR><BR>
 
-  アナザー【第1部】<BR>
+  Another【第1部】<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%A2%E3%83%8A%E3%82%B6%E3%83%BC%E3%80%90%E7%AC%AC1%E9%83%A8%E3%80%91">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%A2%E3%83%8A%E3%82%B6%E3%83%BC%E3%80%90%E7%AC%AC1%E9%83%A8%E3%80%91
   </a><BR><BR>
 
-  アナザー【第2部】<BR>
+  Another【第2部】<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%A2%E3%83%8A%E3%82%B6%E3%83%BC%E3%80%90%E7%AC%AC2%E9%83%A8%E3%80%91">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%A2%E3%83%8A%E3%82%B6%E3%83%BC%E3%80%90%E7%AC%AC2%E9%83%A8%E3%80%91</a><BR><BR>
 
-  ミラーズストーリー<BR>
+  Mirrors故事<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%83%9F%E3%83%A9%E3%83%BC%E3%82%BA%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AA%E3%83%BC">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%83%9F%E3%83%A9%E3%83%BC%E3%82%BA%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AA%E3%83%BC
   </a><BR><BR>
 
-  魔法少女ストーリー<BR>
+  魔法少女故事<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E9%AD%94%E6%B3%95%E5%B0%91%E5%A5%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AA%E3%83%BC">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E9%AD%94%E6%B3%95%E5%B0%91%E5%A5%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AA%E3%83%BC
   </a><BR><BR>
 
-  衣装ストーリー<BR>
+  服装故事<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E8%A1%A3%E8%A3%85%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AA%E3%83%BC">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E8%A1%A3%E8%A3%85%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AA%E3%83%BC
   </a><BR><BR>
 
-  イベントストーリー<BR>
+  活动故事<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%A4%E3%83%99%E3%83%B3%E3%83%88%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AA%E3%83%BC">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%A4%E3%83%99%E3%83%B3%E3%83%88%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AA%E3%83%BC
   </a><BR><BR>
 
-  スペシャル<BR>
+  特别篇<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%B9%E3%83%9A%E3%82%B7%E3%83%A3%E3%83%AB">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%B9%E3%83%9A%E3%82%B7%E3%83%A3%E3%83%AB
   </a><BR><BR>
 
-  EDムービー<BR>
+  ED影片<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=ED%E3%83%A0%E3%83%BC%E3%83%93%E3%83%BC">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=ED%E3%83%A0%E3%83%BC%E3%83%93%E3%83%BC
   </a><BR><BR>
 
-  アニメ<BR>
+  动画<BR>
   <a href="https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%A2%E3%83%8B%E3%83%A1">
     https://script.google.com/macros/s/AKfycbywJL6dtE7K1otSOKb8qeRlrOTjYWv7sTZIwI6EWieinBRJ4P7U/exec?story=%E3%82%A2%E3%83%8B%E3%83%A1
   </a>
